// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serializador (snapshots de cadena, los unicos del proyecto) > panel con linea, circulo y taladro 1`] = `
"<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
     width="200mm" height="60mm"
     viewBox="0 0 200 60" version="1.1">
  <g id="panel-outline" inkscape:groupmode="layer" inkscape:label="Panel outline" fill="none" stroke="#0000ff">
    <path d="M 0 0 L 200 0 L 200 60 L 0 60 Z" fill="none" stroke="#0000ff" stroke-width="0.1"/>
  </g>
  <g id="engrave-lines" inkscape:groupmode="layer" inkscape:label="Engrave lines" fill="none" stroke="#000000">
    <path d="M 10 20 L 20 20" fill="none" stroke="#000000" stroke-width="0.3608"/>
    <path d="M 50 20 A 10 10 0 0 1 50 40 A 10 10 0 0 1 50 20" fill="none" stroke="#000000" stroke-width="0.3608"/>
  </g>
  <g id="drill" inkscape:groupmode="layer" inkscape:label="Drill" fill="none" stroke="#00a000">
    <path d="M 100 25.5 A 4.5 4.5 0 0 1 100 34.5 A 4.5 4.5 0 0 1 100 25.5" fill="none" stroke="#00a000" stroke-width="0.1"/>
  </g>
</svg>
"
`;

exports[`serializador (snapshots de cadena, los unicos del proyecto) > panel vacio 1`] = `
"<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
     width="200mm" height="60mm"
     viewBox="0 0 200 60" version="1.1">
  <g id="panel-outline" inkscape:groupmode="layer" inkscape:label="Panel outline" fill="none" stroke="#0000ff">
    <path d="M 0 0 L 200 0 L 200 60 L 0 60 Z" fill="none" stroke="#0000ff" stroke-width="0.1"/>
  </g>
</svg>
"
`;
